UI/src/css/molecules/m-option.css
m-option-base {
    --color-checked: var(--color-secondary);

    position: relative;

    label {
        align-items: center;
        display: inline-flex;
        gap: 0.2em;
        padding-block: calc(var(--space-1) / 2);
    }

    /* See https://www.sarasoueidan.com/blog/inclusively-hiding-and-styling-checkboxes-and-radio-buttons/ */
    input {
        block-size: var(--option-icon-height);
        inline-size: var(--option-icon-width);
        opacity: 0;
        position: absolute;
        z-index: -1;

        &:focus + label {
            box-shadow: var(--box-shadow);
            outline: var(--focus-outline);
        }
    }

    &:has(:checked) .a-label-option {
        color: var(--color-checked);
    }
}

